css/mobile.css
@media screen and (max-width: 480px) {

    .home {
        flex-direction: column;
        padding-bottom: 12vh;
    }

    .home-content-container {
        width: 100vw;
        height: 85%;
    }

    .lines-container {
        height: 10%;
        width: 100vw;
    }

    .content-first {
        width: 100vw;
        height: 90%;
    }

    .logos-container {
        justify-content: center;
        align-items: center;
        height: 15%;
        width: 100vw;
        padding: 0;
    }

    .l1 {
        height: 0.6vh;
    }

    .l2 {
       height: 0.6vh;
    }

    .content-first > h1 {
        font-size: 15vw;
    }
    
    .content-first > h2 {
        font-size: 8.5vw;
    }

    .container-buttons {
        flex-direction: column;
    }

    .btn-first {
        margin: 1.5vh 0;
        width: 40vw;
        padding: 1vh;
        font-size: 6vw;
    }

    .pp-container {
        position: fixed;
        right: 4vw;
        top: 4vw;
    }

    .pp {
        width: 22vw;
        height: 22vw;
    }

    .logos {
        flex-direction: row;
        justify-content: space-around;
        width: 100%;
    }

    .bulle {
        width: 15vw;
        height: 15vw;
    }

    .logos-img {
        width: 15vw;
        height: 15vw;
    }

    .discover-title {
        font-size: 12vw;
    }

    .discover-profile {
        width: 80%;
        font-size: 5vw;
    }

    .education-title {
        font-size: 12vw;
    }

    .education-list {
        width: 80%;
        font-size: 3.5vw;
        text-align: justify;
    }

    .projects-title {
        font-size: 12vw;
    }

    #slider {
        width: 70vw;
        height: 60vh;
    }

    #container-slider {
        height: 60vh;
    }

    .project-content {
        width: 70vw;
        height: 60vh;
    }

    .project-content h1 {
        font-size: 9vw;
        margin: 0 2vw;
    }
    
    .project-content h2 {
        font-size: 5.5vw;
        margin: 0 2vw;
        margin-bottom: 2vh;
    }

    .boulderdash {
        width: 65vw;
    }
    
    .wifibot {
        width: 60vw;
    }
    
    .povray {
        width: 65vw;
    }
    
    .photoshop {
        width: 45vw;
    }

    .slider-button {
        width: 12vw;
    }

    #leftbtn {
        left: 1vw;
    }
    #rightbtn {
        right: 1vw;
    }
}

